<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/edit_text_rounded_corner"
    android:layout_margin="12sp"
    android:elevation="3sp">

    <include layout="@layout/profile_pic_view"
        android:layout_width="52sp"
        android:layout_height="52sp"
        android:layout_gravity="center"
        android:layout_margin="10sp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
      <RelativeLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="18sp"
            android:textStyle="bold"
            android:id="@+id/user_name_text"
            />

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/demo_time"
              android:id="@+id/last_message_time_text"
              android:layout_marginEnd="40sp"
              android:layout_alignParentEnd="true"
              />


      </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/num_ej"
            android:id="@+id/last_message_text"
            />

    </LinearLayout>

</LinearLayout>