<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PhoneNumberActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087">

        <RelativeLayout
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/my_primary"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.283">

            <TextView
                android:layout_width="29dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/uno"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:layout_marginEnd="20sp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.283">

            <TextView
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/dos"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="32sp"
            android:layout_height="32sp"
            android:background="@drawable/circular_bg"
            android:backgroundTint="@color/light_gray"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.283">

            <TextView
                android:layout_width="49dp"
                android:layout_height="42dp"
                android:gravity="center"
                android:text="@string/tres"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/baseline_phone_android_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222"
        app:tint="@color/my_primary" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:letterSpacing="0.08"
        android:text="@string/introduzca_numero"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.398" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597">

        <com.hbb20.CountryCodePicker
            android:id="@+id/countrycode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:ccp_showFlag="false" />

        <EditText
            android:layout_width="247dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10sp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="5dp"
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/numeromobil"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150sp"
        android:gravity="center"
        android:orientation="vertical"


        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.938"

        >

        <Button
            android:layout_width="300sp"
            android:layout_height="80sp"
            android:text="@string/confirmar"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:id="@+id/login_numero"/>

        <ProgressBar
            android:layout_width="32sp"
            android:layout_height="wrap_content"
            android:id="@+id/progres_numero"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>